include/fitpack_convex_curve_c.h

typedef struct fx_status { bool ok; int code; char message[FX_LEN_STATUS_MSG]; } fx_status;
/* ===========================================================================================
 * Core Memory Management
 *
 * All functions accept an optional status parameter (pass NULL to use error stop on failure).
 * If status is provided, caller is responsible for checking status->ok after the call.
 * =========================================================================================== */

/**
 * @brief Allocate new fitpack_convex_curve object
 * @param self Pointer to wrapper (will be initialized)
 * @param status Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_allocate(fitpack_convex_curve_c* self, fx_status* status);
/**
 * @brief Deallocate fitpack_convex_curve object
 * @param self Pointer to wrapper (will be nullified)
 * @param status Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_destroy(fitpack_convex_curve_c* self, fx_status* status);
/**
 * @brief Copy fitpack_convex_curve object.
 *
 * Default behavior mirrors the source ownership: a view source yields a
 * view (shallow handle copy), an owned source yields a deep copy via
 * Fortran intrinsic assignment. Pass `deep_copy=true` to force a deep
 * copy regardless of the source's ownership — useful for capturing an
 * independent snapshot of a member-view accessor's return value.
 *
 * @param self      Destination wrapper
 * @param other     Source wrapper
 * @param deep_copy When true, always allocate a fresh Fortran object and
 *                  deep-copy data, even if the source is a view.
 * @param status    Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_copy(fitpack_convex_curve_c* self, const fitpack_convex_curve_c* other, bool deep_copy, fx_status* status);
/**
 * @brief Shallow copy (pointer semantics — Fortran "associate" construct)
 * @param self Destination wrapper (will point to same object as 'other')
 * @param other Source wrapper (read-only)
 * @param status Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_associate(fitpack_convex_curve_c* self, const fitpack_convex_curve_c* other, fx_status* status);
/**
 * @brief Move allocation (transfer ownership)
 * @param to Destination wrapper (receives ownership)
 * @param from Source wrapper (becomes null)
 * @param status Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_move_alloc(fitpack_convex_curve_c* to, fitpack_convex_curve_c* from, fx_status* status);
/* ===========================================================================================
 * Method Wrappers (standalone-compatible only)
 * =========================================================================================== */

/**
 * @brief fit
 * @param smoothing 
 * @param order 
 * @param keep_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_convex_curve_c_fit(const fitpack_convex_curve_c* self, double* smoothing, int32_t* order, bool* keep_knots);
/**
 * @brief least_squares
 * @param smoothing 
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_convex_curve_c_least_squares(const fitpack_convex_curve_c* self, double* smoothing, bool* reset_knots);
/**
 * @brief comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_convex_curve_c_comm_size(const fitpack_convex_curve_c* self);
/**
 * @brief mse
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_convex_curve_c_mse(const fitpack_convex_curve_c* self);
/**
 * @brief core_comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_convex_curve_c_core_comm_size(const fitpack_convex_curve_c* self);
/**
 * @brief destroy_base
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_destroy_base(fitpack_convex_curve_c* self);
/**
 * @brief new_points
 * @param x 
 * @param y 
 * @param w 
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_new_points(fitpack_convex_curve_c* self, int32_t n, const double* x, const double* y, double* w);
/**
 * @brief set_convexity
 * @param v 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_convex_curve_c_set_convexity(const fitpack_convex_curve_c* self, int32_t n, const double* v);
/**
 * @brief comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_comm_pack(fitpack_convex_curve_c* self, int32_t n, double* buffer);
/**
 * @brief comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_comm_expand(fitpack_convex_curve_c* self, int32_t n, const double* buffer);
/**
 * @brief core_comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_core_comm_pack(fitpack_convex_curve_c* self, int32_t n, double* buffer);
/**
 * @brief core_comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_core_comm_expand(fitpack_convex_curve_c* self, int32_t n, const double* buffer);
/* ===========================================================================================
 * Component Array Accessors (raw pointer + extents)
 * =========================================================================================== */

/**
 * @brief Borrow the storage of allocatable array component 'v'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_getcomp_v(const fitpack_convex_curve_c* self, double** ptr, int64_t extents[1]);
/**
 * @brief Borrow the storage of allocatable array component 'sx'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_convex_curve_c_getcomp_sx(const fitpack_convex_curve_c* self, double** ptr, int64_t extents[1]);
/* ===========================================================================================
 * Scalar Property Accessors
 * =========================================================================================== */

FITPACK_CAPI_EXPORT int32_t* fitpack_convex_curve_c_ref_maxtr(const fitpack_convex_curve_c* self);
FITPACK_CAPI_EXPORT int32_t* fitpack_convex_curve_c_ref_maxbin(const fitpack_convex_curve_c* self);